# monkey_pose_mimic

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.id.md  README.md  config.py  main.py  pose_detector.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
